@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.447 2007-08-17 08:48:22 sb Exp $
+# $Id: CHANGES,v 1.448 2007-08-20 14:53:43 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,7 +10,10 @@
 # --
 
 2.2.3 (2007/??/??)
- - /2007/08/17) Fixed bug# 1908 - Removed duplicate history entry for ticket subscribe action.
+ - (2007/08/20) Fixed bug# 2192 - Useless fragments of old escalation mechanism
+    produces errors.
+ - (2007/08/17) Fixed bug# 1908 - Removed duplicate history entry for ticket
+    subscribe action.
  - (2007/08/16) Fixed bug# 1492 - Fixed typo in Kernel/Language.pm.
  - (2007/08/10) Fixed bug# 2160 - 0 was ignored in database insert by package
     building.
